2008-08-08 Raphael Neider <rneider AT web.de>

	* src/pic/pcoderegs.c,
	* src/pic/pcode.c,
	* src/pic16/pcode.c: replace own SAFE_snprintf with common SNPRINTF

2008-08-07 Borut Razem <borut.razem AT siol.net>

	* src/SDCCval.c, src/SDCCmain.c, src/SDCC.lex,
	  device/lib/pic/Makefile.rules, device/lib/ds390/Makefile.in,
	  device/lib/ds400/Makefile.in, device/lib/hc08/Makefile.in,
	  support/cpp/libcpp/lex.c,  doc/sdccman.lyx:
	  applied modified patsh 2038174: Add support for binary constants v2
	  thanks Mauro Giachero
	* .version, doc/sdccman.lyx: bumped sdcc version to 2.8.3

2008-08-04 Raphael Neider <rneider AT web.de>

	* doc/sdccman.lyx,
	* src/pic16/device.h,
	* src/pic16/glue.c,
	* src/pic16/main.c: enable --optimize-goto by default

	* device/lib/pic16/Makefile.common.in: suppress removed option

	* src/pic16/gen.c,
	* src/pic16/genutils.c: avoid too long relative branches (#2031890)

2008-07-30 Borut Razem <borut.razem AT siol.net>

	* src/pic16/device.c, src/pic16/glue.c, src/pic16/pcode.c:
	  applied patch 22032433: PIC16: fix constant strings,
	  thanks Mauro Giachero

2008-07-29 Borut Razem <borut.razem AT siol.net>

	* src/pic16/gen.c: applied patches:
	  2030306: [1/3] PIC16: fix failing rotate.c tests on 16-bit variables,
	  2030307: [2/3] PIC16: fix failing rotate.c tests for 32-bit var (1),
	  2030310: [3/3] PIC16: fix failing rotate.c tests for 32-bit var (2),
	  thanks Mauro Giachero

2008-07-13 Philipp Klaus Krause <pkk AT spth.de>
	* src/port.h: Fixed typo in comment

2008-07-12 Philipp Klaus Krause <pkk AT spth.de>
	* src/z80/mappings.i: Implemented RFE #1919415
	* src/z80/peeph-z80.def: Implemented RFE #1919415, #1861376,
	  #1880202, #1914434, prepared for RFE #1703943

2008-07-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph.def,
	* src/z80/peeph-z80.def,
	* src/z80/peeph-gbz80.def: separate Z80 from GBZ80 peepholes in
	  preparation for Z80 peephole improvements

2008-06-21 Raphael Neider <rneider AT web.de>
